--- a/index.html
+++ b/index.html
@@ -86,6 +86,28 @@ textarea {
 	padding: 0;
 	outline: none;
 }
+.v-spinner {
+  position: absolute;
+  left: 0;
+  right: 0;
+  width: 100%;
+  bottom: 0;
+  top: 0;
+  overflow: hidden;
+  z-index: 999;
+  background: #fff;
+}
+.v-ring {
+	width: 1.2rem !important;
+	height: 1.2rem !important;
+	border-color: #333 !important;
+	border-width: .1rem !important;
+}
+.v-ring1 {
+	top: 4.5rem !important;
+  left: 50% !important;
+  transform: translateX(-60%) !important;
+}
 </style>
 
 
